[gd_scene load_steps=11 format=3 uid="uid://dt13xmdgt6ou5"]

[ext_resource type="Texture2D" uid="uid://qcgbp3kic67s" path="res://Scenes/UI/Menus/volume_grabber.png" id="1_aba8u"]
[ext_resource type="Script" uid="uid://cuvb1b4r70haw" path="res://Scenes/UI/Menus/volume_controls.gd" id="1_jqkup"]
[ext_resource type="Texture2D" uid="uid://d2rl6n1q5p67g" path="res://Scenes/UI/Menus/music_button_normal.png" id="1_sd0as"]
[ext_resource type="Texture2D" uid="uid://c2v5g47sx5fvu" path="res://Scenes/UI/Menus/slider_background.png" id="2_lgkg4"]
[ext_resource type="Texture2D" uid="uid://dj5ukqsp5dnim" path="res://Scenes/UI/Menus/music_button_hover.png" id="2_urijg"]
[ext_resource type="Texture2D" uid="uid://chj2h77ubilqc" path="res://Scenes/UI/Menus/master_button_normal.png" id="4_dgalo"]
[ext_resource type="Texture2D" uid="uid://mnr4exgryb55" path="res://Scenes/UI/Menus/master_button_hover.png" id="5_6tcjg"]
[ext_resource type="Texture2D" uid="uid://do882d0rsblx3" path="res://Scenes/UI/Menus/sfx_button_normal.png" id="8_dgalo"]
[ext_resource type="Texture2D" uid="uid://byy0wd5g58pmm" path="res://Scenes/UI/Menus/sfx_button_hover.png" id="9_6tcjg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgkg4"]
bg_color = Color(0.95686275, 0.95686275, 0.95686275, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[node name="VolumeControls" type="Control"]
layout_mode = 3
anchor_right = 0.061000004
anchor_bottom = 0.208
offset_right = 0.6599884
offset_bottom = 0.43000793
script = ExtResource("1_jqkup")

[node name="Sliders" type="Control" parent="."]
anchors_preset = 0
offset_right = 120.0
offset_bottom = 176.0

[node name="TextureRect" type="TextureRect" parent="Sliders"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_right = 0.333
anchor_bottom = 1.0
offset_right = 0.040000916
size_flags_horizontal = 6
texture = ExtResource("2_lgkg4")

[node name="MasterSlider" type="VSlider" parent="Sliders/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -77.38501
offset_right = 6.5
offset_bottom = 77.38501
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("1_aba8u")
theme_override_icons/grabber_highlight = ExtResource("1_aba8u")
theme_override_icons/grabber_disabled = ExtResource("1_aba8u")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_lgkg4")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_lgkg4")

[node name="TextureRect3" type="TextureRect" parent="Sliders"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.66700006
anchor_right = 0.87500006
anchor_bottom = 1.0
offset_left = -0.040008545
size_flags_horizontal = 6
texture = ExtResource("2_lgkg4")

[node name="MusicSlider" type="VSlider" parent="Sliders/TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -77.38501
offset_right = 6.5
offset_bottom = 77.38501
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("1_aba8u")
theme_override_icons/grabber_highlight = ExtResource("1_aba8u")
theme_override_icons/grabber_disabled = ExtResource("1_aba8u")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_lgkg4")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_lgkg4")

[node name="TextureRect2" type="TextureRect" parent="Sliders"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.2080001
anchor_right = 1.417
anchor_bottom = 1.0
offset_left = 0.039993286
offset_right = -0.040008545
size_flags_horizontal = 6
texture = ExtResource("2_lgkg4")

[node name="SFXSlider" type="VSlider" parent="Sliders/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.5
offset_top = -77.38501
offset_right = 6.5
offset_bottom = 77.38501
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("1_aba8u")
theme_override_icons/grabber_highlight = ExtResource("1_aba8u")
theme_override_icons/grabber_disabled = ExtResource("1_aba8u")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_lgkg4")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_lgkg4")

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.77400005
anchor_right = 1.01
anchor_bottom = 1.018
offset_top = -0.07418823
offset_right = 0.04220581
offset_bottom = 0.008743286
size_flags_vertical = 2
theme_override_constants/separation = 10

[node name="Master" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("4_dgalo")
texture_pressed = ExtResource("5_6tcjg")

[node name="Music" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("1_sd0as")
texture_pressed = ExtResource("2_urijg")

[node name="SFX" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("8_dgalo")
texture_pressed = ExtResource("9_6tcjg")

[connection signal="value_changed" from="Sliders/TextureRect/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Sliders/TextureRect3/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Sliders/TextureRect2/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Buttons/Master" to="." method="_on_master_pressed"]
[connection signal="pressed" from="Buttons/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="Buttons/SFX" to="." method="_on_sfx_pressed"]
